--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <title>Kateryna Kravchuk Portfolio of a FrontEnd developer </title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -47,16 +47,16 @@
         </a>
         <ul>
           <li>
-            <a href="/"> Home</a>
+            <a href="/">Домашняя страница</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html">Немного обо мне</a>
           </li>
           <li class="active">
-            <a href="/work.html"> Work</a>
+            <a href="/work.html">Мои работы</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -66,14 +66,11 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content text-center">
-            <h1 class="mb-4">Hello, I am Kateryna Kravchuk</h1>
-            <h2 clas="mb-4">Front-End Developer, based in Europe</h2>
+            <h1 class="mb-4">Привет, меня зовут Екатерина</h1>
+            <h2 clas="mb-4">Я Front-End разработчик. В настоящее время живу в Краснодаре и ищу интересные кейсы для моего портфолио</h2>
             <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
+             Я прошла путь от специалиста техподдержки и сейлза в IT до разработчика. Интернет технологии прочно вошли в мою жизнь и сейчас я получаю огромное удовольствие от создания сайтов и вебдизайна. Я вдохновляюсь работами лучших в своем деле, вкладываю в мои проекты душу, и это делает их по-настоящему уникальными
+            </p
             <a href="" class="btn btn-branding">See my projects</a>
           </div>
         </div>
