--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="About Kateryna Kravchuk, a front-end developer based in Lyon, France, check out her projects and contact her for job inquiries"
+      content="About Kateryna Kravchuk, a front-end developer based in Krasnodar,Russia, check out her projects and contact her for job inquiries"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
@@ -14,22 +14,26 @@
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
     ></script>
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://kit.fontawesome.com/74cd22f730.js"
       crossorigin="anonymous"
@@ -71,12 +75,12 @@
     </div>
 
     <div class="hero">
-      <p>👋Hi, I am</p>
-      <h1 class="mb-3">Kateryna Kravchuk</h1>
-      <h2 class="mb-5">Front-End Developer based in Europe, France</h2>
+      <p>👋Привет, меня зовут</p>
+      <h1 class="mb-3">Екатерина Кравчук</h1>
+      <h2 class="mb-5">Я FrontEnd разработчик</h2>
       <div class="navigation-links d-flex justify-content-center">
-        <a href="/work.html" class="btn btn-branding">Work Page</a>
-        <a href="/about.html" class="btn btn-branding">About me</a>
+        <a href="/work.html" class="btn btn-branding">Мои работы</a>
+        <a href="/about.html" class="btn btn-branding">Немного обо мне</a>
       </div>
     </div>
 
@@ -85,20 +89,19 @@
         <div class="col d-none d-lg-block">
           <img
             src="src/images/painting.jpg"
-            alt="Painting in France preview"
+            alt="Interior design"
             class="img-fluid"
           />
         </div>
 
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Painting Application</h2>
+            <h2 class="mb-5">Сайт о решениях в интерьере</h2>
 
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Каждый человек нуждается в красивом уютном пространстве, а
+              пространство нуждается в заботливом расчете, чертежах, развёрстках
+              и выкрасах. Сайт об интерьерных решениях.
             </p>
 
             <div class="navigation-links mt-5">
